--- a/machine/corvette/TODO
+++ b/machine/corvette/TODO
@@ -19,6 +19,9 @@ According to my electronics buddy he says that there's two pull-up resistors (R1
 solenoids at power on.  To enable solenoid power you have to write a 0 in bit 0 (LSB - D0) of WPC_EXTBOARD3 which
 disables the DISABLE_A and DISABLE_B lines.  To then disable the solenoid power by software you set bit 0 (LSB - 
 D0) of WPC_EXTBOARD3 to 1, thus activating the DISABLE_A and DISABLE_B lines. 
+UPDATE: after real machine testing the reverse was found, setting WPC_EXTBOARD3 to 1 enables the solenoids, setting
+it to 0 disables the solenoids.  Solenoids ARE disabled on initial power up so the part about the pull-up resistors
+partly holds true.
 
 The Visual Pinball and VPinMame emulation of Corvette uses values in the range of 64 to 192.
 64 meaning far left, 127 meaning center, 192 meaning right.
