--- a/doc/hardware.texi
+++ b/doc/hardware.texi
@@ -28,23 +28,36 @@ differed only slightly.  In order of appearance:
 The initial generation, which used 2 16-character alphanumeric displays,
 Each character is comprised of 14 line segments, a comma, and a period.
 
+In addition to the CPU board, there is a power driver board which handles
+all of the high voltage I/O, and an alphanumeric controller board, which
+translates CPU commands into the proper signals that the displays need.
+There is also a separate sound board.
+
 @item WPC DMD
 
-The alphanumerics are replaced by the dot matrix controller/display,
-which has 128x32 pixels.  The DMD controller board can store up to 16
-frames in memory separate from the regular CPU memory, and can quickly
-switch between them.  The display refreshes at 122Mhz.
+In the second generation, the alphanumerics are replaced by a
+dot matrix controller/display (DMD), which has 128x32 pixels.
+The display expects a serial bitstream and must be continously refreshed.
+The controller board stores up to 16 frames in its own RAM and handles
+the refresh.  It connects to the main CPU board which writes the data.
+The display refreshes at 122Mhz.
 
 @item WPC Fliptronic
 
-The flipper switches/drive transistors are moved from the regular
-switch matrix/power driver board onto a separate board.
+Here, the flipper switches and drive transistors are moved from the regular
+switch matrix and power driver board onto a separate board, called the
+Fliptronic Board.  There are Fliptronic I and Fliptronic II boards but
+they appear the same to software.
+
+This frees up several of the switch matrix entries previously used for
+flipper buttons for other purposes.  The flipper-related circuitry on
+the power driver board goes unused.
 
 @item WPC DCS
 
-The sound board is radically improved, replacing the synthesizer chip
-and low-quality analog circuits with a DSP supporting high fidelity, stereo,
-multi-channel sound.
+With the DCS generation, the sound board is radically improved,
+replacing the synthesizer chip and low-quality analog circuits with a DSP
+supporting high fidelity, stereo, multi-channel sound.
 
 @item WPC Security
 
@@ -52,7 +65,7 @@ A security PIC chip is added between the ASIC and the switch matrix
 inputs.  The CPU no longer reads the switch data directly; it sends
 commands to the PIC which then reads the data.  The PIC requires some
 special cryptic codes to be sent otherwise it will not return valid
-switch data.
+switch data, making the game unplayable.
 
 @item WPC-95
 
@@ -72,7 +85,7 @@ required to address more than 64KB.  On reset, location 0xFFFE is
 read to determine the address of the first instruction.
 
 8KB of RAM is located at physical address 0x0000.  When power is turned off,
-three batteries on the CPU board maintain the state of the RAM.
+three AA batteries on the CPU board maintain the state of the RAM.
 
 The game ROM size varies from 128KB to 1MB, depending on the game.
 The hardware supports a maximum of 1MB; this upper limit was used in all of
@@ -187,7 +200,8 @@ the power driver board, which controls lamps and general solenoids.
 Display, sound, and flipper interfaces differ somewhat between generations.
 
 Special I/O boards exist to drive other miscellaneous devices like
-ticket dispensers or a printer.
+ticket dispensers or a printer.  These were addons that are not typically
+installed in all machines.
 
 @subsection Interrupts
 
@@ -406,57 +420,91 @@ and makes this accessible to the CPU by reading the WPC_DMD_SCANLINE register.
 Values range from 0 to 31.
 
 The CPU can also write to WPC_DMD_SCANLINE to request an FIRQ interrupt
-to be generated when the current scanline reaches a certain value.
+to be generated when the current scanline reaches a certain value.  This is
+used to implement shading: the active page buffer is rapidly changed between
+different bit planes at different frequencies to simulate color.  Because
+there is latency between the time that FIRQ is generated and the CPU can
+respond to it, this writable register can compensate for that delay and
+help to ensure that flipping occurs as fast as possible.
 
 @end itemize
 
 @section Memory Map
 
 This section describes the WPC memory map in detail.  In particular,
-it gives the function of each of the WPC ASIC registers.
+it gives the function of each of the WPC ASIC registers, along with the
+names given to them by FreeWPC.
 
 @table @asis
-@item #define WPC_RAM_BASE                0x0000
+
+@item  WPC_RAM_BASE (0x0000)
+
 System RAM (2K)
 
-@item #define WPC_DMD_RAM_BASE            0x3800
+@item  WPC_DMD_RAM_BASE (0x3800)
+
 Display RAM (1K).  Which 1K portion of the 16K SRAM
 appears here is controlled by writing to two display
 paging registers, WPC_DMD_HIGH_PAGE and WPC_DMD_LOW_PAGE.
 On WPC-95 only, up to 3K can be mapped, starting at 0x3000.
-@item #define WPC_DEBUG_DATA_PORT			0x3D60
-@item #define WPC_DEBUG_CONTROL_PORT		0x3D61
-@item #define WPC_SERIAL_CONTROL_PORT 		0x3E66
-@item #define WPC_SERIAL_DATA_PORT 			0x3E67
 
-@item #define WPC_DMD_3200_PAGE				0x3FB8 *WPC-95
+@item  WPC_DEBUG_DATA_PORT (0x3D60)
+
+@item  WPC_DEBUG_CONTROL_PORT (0x3D61)
+
+@item  WPC_SERIAL_CONTROL_PORT (0x3E66)
+
+@item  WPC_SERIAL_DATA_PORT (0x3E67)
+
+@item  WPC_DMD_3200_PAGE (0x3FB8) [WPC-95 only]
+
 3-0: W: The page of display RAM mapped into the 2nd region,
 from 0x3200-0x33FF.
-@item #define WPC_DMD_3000_PAGE				0x3FB9 *WPC-95
+
+@item  WPC_DMD_3000_PAGE (0x3FB9) [WPC-95 only]
+
 3-0: W: The page of display RAM mapped into the 1st region,
 from 0x3000-0x31FF.
-@item #define WPC_DMD_3600_PAGE				0x3FBA *WPC-95
-@item #define WPC_DMD_3400_PAGE				0x3FBB *WPC-95
-@item #define WPC_DMD_HIGH_PAGE 				0x3FBC
+
+@item  WPC_DMD_3600_PAGE (0x3FBA) [WPC-95 only]
+
+@item  WPC_DMD_3400_PAGE (0x3FBB) [WPC-95 only]
+
+@item  WPC_DMD_HIGH_PAGE (0x3FBC)
+
 3-0: W: The page of display RAM mapped into the 2nd (6th on WPC95) region,
 from 0x3A00-0x3BFF.
-@item #define WPC_DMD_SCANLINE      		0x3FBD
+
+@item  WPC_DMD_SCANLINE (0x3FBD)
+
 7-0: W: Request an FIRQ after a particular scanline is drawn
 5-0: R: The last scanline that was drawn
-@item #define WPC_DMD_LOW_PAGE 				0x3FBE
+
+@item  WPC_DMD_LOW_PAGE 				0x3FBE
+
 3-0: W: The page of display RAM mapped into the 1st (5th on WPC95) region,
 from 0x3800-0x39FF.
-@item #define WPC_DMD_ACTIVE_PAGE 			0x3FBF
+
+@item  WPC_DMD_ACTIVE_PAGE 			0x3FBF
 3-0: W: The page of display RAM to be used for refreshing the display.
 Writes to this register take effect just prior to drawing scanline 0.
-@item #define WPC_PARALLEL_STATUS_PORT 	0x3FC0
-@item #define WPC_PARALLEL_DATA_PORT 		0x3FC1
-@item #define WPC_PARALLEL_STROBE_PORT 	0x3FC2
-@item #define WPC_SERIAL_DATA_OUTPUT 		0x3FC3
-@item #define WPC_SERIAL_CONTROL_OUTPUT	0x3FC4
-@item #define WPC_SERIAL_BAUD_SELECT 		0x3FC5
-@item #define WPC_TICKET_DISPENSE 			0x3FC6
-@item #define WPC_FLIPTRONIC_PORT_A 		0x3FD4
+
+@item  WPC_PARALLEL_STATUS_PORT 	(0x3FC0)
+
+@item  WPC_PARALLEL_DATA_PORT 	(0x3FC1)
+
+@item  WPC_PARALLEL_STROBE_PORT 	(0x3FC2)
+
+@item  WPC_SERIAL_DATA_OUTPUT 	(0x3FC3)
+
+@item  WPC_SERIAL_CONTROL_OUTPUT	(0x3FC4)
+
+@item  WPC_SERIAL_BAUD_SELECT 	(0x3FC5)
+
+@item  WPC_TICKET_DISPENSE 		(0x3FC6)
+
+@item  WPC_FLIPTRONIC_PORT_A 		(0x3FD4)
+
 7: W: Enable upper-left flipper hold
 6: W: Enable upper-left flipper power
 5: W: Enable upper-right flipper hold
@@ -474,35 +522,57 @@ Writes to this register take effect just prior to drawing scanline 0.
 1: R: Lower-right flipper EOS input
 0: R: Lower-right flipper cabinet input
 
-@item #define WPC_FLIPTRONIC_PORT_B 		0x3FD5
+@item  WPC_FLIPTRONIC_PORT_B 		0x3FD5
+
 Not used.
-@item #define WPCS_DATA 						0x3FDC
+
+@item  WPCS_DATA 						0x3FDC
+
 7-0: R/W: Send/receive a byte of data to/from the sound board.
-@item #define WPCS_CONTROL_STATUS 			0x3FDD
+
+@item  WPCS_CONTROL_STATUS 			0x3FDD
+
 7: R: WPC sound board read ready
 0: R: DCS sound board read ready
-@item #define WPC_SOL_GEN_OUTPUT 		   0x3FE0
+
+@item  WPC_SOL_GEN_OUTPUT 		   0x3FE0
+
 7-0: W: Enables for solenoids 25-29
-@item #define WPC_SOL_HIGHPOWER_OUTPUT 	0x3FE1
+
+@item  WPC_SOL_HIGHPOWER_OUTPUT 	0x3FE1
+
 7-0: W: Enables for solenoids 1-8
-@item #define WPC_SOL_FLASH1_OUTPUT 		0x3FE2
+
+@item  WPC_SOL_FLASH1_OUTPUT 		0x3FE2
+
 7-0: W: Enables for solenoids 17-24
-@item #define WPC_SOL_LOWPOWER_OUTPUT 		0x3FE3
+
+@item  WPC_SOL_LOWPOWER_OUTPUT 		0x3FE3
+
 7-0: W: Enables for solenoids 9-16
-@item #define WPC_LAMP_ROW_OUTPUT 			0x3FE4
+
+@item  WPC_LAMP_ROW_OUTPUT 			0x3FE4
+
 7-0: W: Lamp matrix row output
-@item #define WPC_LAMP_COL_STROBE 			0x3FE5
+
+@item  WPC_LAMP_COL_STROBE 			0x3FE5
+
 7-0: W: Lamp matrix column strobe
 At most one bit in this register should be set.
 If all are clear, then no controlled lamps are
 enabled.
-@item #define WPC_GI_TRIAC 					0x3FE6
+
+@item  WPC_GI_TRIAC 					0x3FE6
+
 7: W: Flipper enable relay
 5: W: Coin door enable relay
 4-0: W: General illumination enables
-@item #define WPC_SW_JUMPER_INPUT 			0x3FE7
+
+@item  WPC_SW_JUMPER_INPUT 			0x3FE7
 7-0: R: Jumper/DIP switch inputs
-@item #define WPC_SW_CABINET_INPUT 			0x3FE8
+
+@item  WPC_SW_CABINET_INPUT 			0x3FE8
+
 7: R: Fourth coin switch
 6: R: Right coin switch
 5: R: Center coin switch
@@ -511,66 +581,103 @@ enabled.
 2: R: Up button
 1: R: Down button
 0: R: Escape (Service Credit) button
-@item #define WPC_SW_ROW_INPUT 				0x3FE9 *Pre-security
+
+@item  WPC_SW_ROW_INPUT 				0x3FE9 *Pre-security
+
 7-0: R: Readings for the currently selected switch column.
 Bit 0 corresponds to row 1, bit 1 to row 2, and so on.
 A '1' indicates active voltage level.  For a mechanical switch,
 this means the switch is closed.  For an optical switch, this
 means the switch is open.
-@item #define WPCS_PIC_READ 					0x3FE9 *WPC-S
-@item #define WPC_SW_COL_STROBE 				0x3FEA *Pre-security
-@item #define WPCS_PIC_WRITE 					0x3FEA *WPC-S
+
+@item  WPCS_PIC_READ 					0x3FE9 *WPC-S
+
+@item  WPC_SW_COL_STROBE 				0x3FEA *Pre-security
+
+@item  WPCS_PIC_WRITE 					0x3FEA *WPC-S
+
 7-0: W: Switch column strobe.
 For pre-Security games, exactly one bit must be set.
 For Security games, writing to this register sends a command
 to the PIC chip and does not directly control the strobe line.
-@item #define WPC_ALPHA_POS 					0x3FEB *Alphanumeric
-@item #define WPC_EXTBOARD1 					0x3FEB *DMD
+
+@item  WPC_ALPHA_POS 					0x3FEB *Alphanumeric
+
+@item  WPC_EXTBOARD1 					0x3FEB *DMD
+
 On DMD games, this is a general I/O that is used for machine-specific
 purposes.
-@item #define WPC_ALPHA_ROW1 					0x3FEC *Alphanumeric
-@item #define WPC_EXTBOARD2 					0x3FEC *DMD
+
+@item  WPC_ALPHA_ROW1 					0x3FEC *Alphanumeric
+
+@item  WPC_EXTBOARD2 					0x3FEC *DMD
+
 On DMD games, this is a general I/O that is used for machine-specific
 purposes.
-@item #define WPC_EXTBOARD3 					0x3FED *DMD
+
+@item  WPC_EXTBOARD3 					0x3FED *DMD
+
 On DMD games, this is a general I/O that is used for machine-specific
 purposes.
-@item #define WPC_ALPHA_ROW2 					0x3FEE *Alphanumeric
-@item #define WPC95_FLIPPER_COIL_OUTPUT 	0x3FEE *WPC-95
-@item #define WPC95_FLIPPER_SWITCH_INPUT 	0x3FEF *WPC-95
-@item #define WPC_LEDS 							0x3FF2
+
+@item  WPC_ALPHA_ROW2 					0x3FEE *Alphanumeric
+
+@item  WPC95_FLIPPER_COIL_OUTPUT 	0x3FEE *WPC-95
+
+@item  WPC95_FLIPPER_SWITCH_INPUT 	0x3FEF *WPC-95
+
+@item  WPC_LEDS 							0x3FF2
+
 7: R/W : The state of the diagnostic LED.
 >0=Off
 >1=On
-@item #define WPC_RAM_BANK 					0x3FF3 *WPC-95
+
+@item  WPC_RAM_BANK 					0x3FF3 *WPC-95
+
 3-0: W: The page of RAM currently mapped into the banked region.
-@item #define WPC_SHIFTADDR 					0x3FF4
+
+@item  WPC_SHIFTADDR 					0x3FF4
 15-0: R/W: The base address for the bit shifter.
 Writing to this address initializes the shifter.
 Reading from this address after a shift command returns the
 shifted address.
-@item #define WPC_SHIFTBIT 					0x3FF6
+
+@item  WPC_SHIFTBIT 					0x3FF6
 7-0: W: Sets the bit position for a shift command.
 7-0: R: Returns the output of the last shift command as a bitmask.
-@item #define WPC_SHIFTBIT2 					0x3FF7
+
+@item  WPC_SHIFTBIT2 					0x3FF7
 7-0: R/W:
-@item #define WPC_PERIPHERAL_TIMER_FIRQ_CLEAR 0x3FF8
-@item #define WPC_ROM_LOCK 					0x3FF9
+
+@item  WPC_PERIPHERAL_TIMER_FIRQ_CLEAR 0x3FF8
+
+@item  WPC_ROM_LOCK 					0x3FF9
+
 Not used
-@item #define WPC_CLK_HOURS_DAYS 			0x3FFA
+
+@item  WPC_CLK_HOURS_DAYS 			0x3FFA
+
 7-0: R/W : The time-of-day hour counter.
-@item #define WPC_CLK_MINS 					0x3FFB
+
+@item  WPC_CLK_MINS 					0x3FFB
+
 7-0: R/W : The time-of-day minute counter.
-@item #define WPC_ROM_BANK 					0x3FFC
+
+@item  WPC_ROM_BANK 					0x3FFC
+
 5-0: R/W: The page of ROM currently mapped into the banked region (0x4000-0x7FFF).
 Pages 62 and 63 correspond to the uppermost 32KB, and are not normally mapped
 because those pages are accessible in the fixed region (0x8000-0xFFFF).
 Page numbers are consecutive.  Page 0 corresponds to the lowest address in a
 1MB device.  If a smaller ROM is installed, the uppermost bits of this register
 are effectively ignored.
-@item #define WPC_RAM_LOCK 					0x3FFD
-@item #define WPC_RAM_LOCKSIZE 				0x3FFE
-@item #define WPC_ZEROCROSS_IRQ_CLEAR 		0x3FFF
+
+@item  WPC_RAM_LOCK 					0x3FFD
+
+@item  WPC_RAM_LOCKSIZE 				0x3FFE
+
+@item  WPC_ZEROCROSS_IRQ_CLEAR 		0x3FFF
+
 7: R: Set to 1 when AC is currently at a zero crossing, or 0 otherwise.
 7: W: Writing a 1 here clears the source of the periodic timer interrupt.
 4: R/W: Periodic timer interrupt enable
