--- a/machine/t2/t2.md
+++ b/machine/t2/t2.md
@@ -379,29 +379,14 @@ Amode: runner, PRI_LEFF1, LAMPS(ALL), GI(ALL), page(MACHINE_PAGE)
 
 [templates]
 
-Left Sling: driver(spsol),
-	sw=SW_LEFT_SLING, sol=SOL_LEFT_SLING,
-	ontime=3, offtime=16
-
-Right Sling: driver(spsol),
-	sw=SW_RIGHT_SLING, sol=SOL_RIGHT_SLING,
-	ontime=3, offtime=16
-
-Left Jet: driver(spsol),
-	sw=SW_LEFT_JET, sol=SOL_LEFT_JET,
-	ontime=3, offtime=16
-
-Upper Jet: driver(spsol),
-	sw=SW_RIGHT_JET, sol=SOL_RIGHT_JET,
-	ontime=3, offtime=16
-
-Lower Jet: driver(spsol),
-	sw=SW_BOTTOM_JET, sol=SOL_BOTTOM_JET,
-	ontime=3, offtime=16
+Left Sling: driver(sling), sw=SW_LEFT_SLING, sol=SOL_LEFT_SLING
+Right Sling: driver(sling), sw=SW_RIGHT_SLING, sol=SOL_RIGHT_SLING
+Left Jet: driver(jet), sw=SW_LEFT_JET, sol=SOL_LEFT_JET
+Upper Jet: driver(jet), sw=SW_RIGHT_JET, sol=SOL_RIGHT_JET
+Lower Jet: driver(jet), sw=SW_BOTTOM_JET, sol=SOL_BOTTOM_JET
 
 Kickback Driver: driver(spsol),
-	sw=SW_LEFT_OUTLANE, sol=SOL_KICKBACK,
-	ontime=12, offtime=18
+	sw=SW_LEFT_OUTLANE, sol=SOL_KICKBACK, ontime=12, offtime=18
 
 Skull Drop: driver(drop),
 	sol_up=SOL_SKULL_DROP_UP, sol_down=SOL_SKULL_DROP_DOWN,
